syntax = "proto3";
option java_outer_classname = "DeviceCommunicationProto";
option java_multiple_files = true;

service DeviceCommunication {

  rpc StatusChangeRequest (StatusChangeRequestMessage) returns (StatusChangeResponseMessage) {}

  rpc StatusRequest (StatusRequestMessage) returns (stream StatusResponseMessage) {}

}

message StatusChangeRequestMessage {
  string status = 1; //ON, OFF
  int64 ts = 2;
}

message StatusChangeResponseMessage {
  int64 ts = 2;
  string deviceUuid = 3;
}

message StatusRequestMessage {
  int64 timeSecondInterval = 1;
  int64 ts = 2;
}

message StatusResponseMessage {
  string deviceUuid = 1;
  string status = 2;
  double temperature = 3;
  double humidity = 4;
  int64 ts = 5;
}
